first functioning app

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,15 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   margin: 0;
   font-family: Inter, sans-serif;
   background-color: #FAFAF8;
   color:black;
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+  overflow: auto;
 }
 
 #root {
